--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
   "name": "macro-backend",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "type": "module",
+
   "scripts": {
-    "start":  "node server.js & node bot.js & wait",
+    "start":  "concurrently \"node server.js\" \"node bot.js\"",
     "server": "node server.js",
     "bot":    "node bot.js"
   },
+
   "dependencies": {
-    "better-sqlite3": "^9.4.0",
-    "cors":           "^2.8.5",
-    "discord.js":     "^14.14.1",
-    "express":        "^4.19.2",
-    "node-fetch":     "^3.3.2"
+    "better-sqlite3":   "^9.4.0",
+    "cookie-parser":    "^1.4.6",
+    "cors":             "^2.8.5",
+    "discord.js":       "^14.14.1",
+    "express":          "^4.19.2",
+    "express-session":  "^1.18.0",
+    "node-fetch":       "^3.3.2",
+    "passport":         "^0.7.0",
+    "passport-discord": "^0.1.4",
+    "uuid":             "^9.0.1",
+    "querystring":      "^0.2.1"
+  },
+
+  "devDependencies": {
+    "concurrently": "^7.6.0"
   }
 }
